adding AppBar without any functions

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3,6 +3,7 @@
 // Bootstrap
 @import 'bootstrap';
 @import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'bootstrap-icons/font/bootstrap-icons';
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
