--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,6 +7,5 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-.app{
-  font-family: 'Roboto', sans-serif;
-}
+// Custom scss files
+@import './typo.scss';
