add headline and i18n

--- a/src/assets/scss/typo.scss
+++ b/src/assets/scss/typo.scss
@@ -26,6 +26,14 @@
   font-size: 18px;
   letter-spacing: 0.1pt;
   line-height: 24px;
+  font-weight: 300;
+}
+
+.caption {
+  font-size: 14px;
+  letter-spacing: 0.08pt;
+  line-height: 20px;
+  font-weight: 100;
 }
 
 .underlined {
