--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,7 +5,7 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import 'bootstrap-icons/font/bootstrap-icons';
 // Fonts
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
 
 // Custom scss files
 @import './typo.scss';
